mindre ændringer + footer

--- a/ux.html
+++ b/ux.html
@@ -18,11 +18,10 @@
           <div id="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
           <nav class="cd-primary-nav">
                <ul>
-                    <li><a href="#0">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#0">About</a></li>
                     <li><a href="#0">Portfolio</a></li>
-                    <li><a href="#0">Contact</a></li>
-                    <li><a href="#0">Timeline</a></li>
+                    <li><a href="#0">Example</a></li>
                </ul>
           </nav>
           <!-- cd-primary-nav -->
@@ -30,7 +29,7 @@
           <nav>
                <ul>
                     <li>
-                         <a href="#">Home</a>
+                         <a href="index.html>Home</a>
                     </li>
                     <li>
                          <a href="#">About</a>
@@ -69,30 +68,24 @@
                <ul>
                     <li>
                          <a href="#cd-placeholder-1">
-						<b>Om</b>
+						<b>Intro</b>
 						<span></span><!-- icon -->
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-2">
-						<b>Portfolio</b>
+						<b>Cases</b>
 						<span></span><!-- icon -->
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-3">
-						<b>Timeline</b>
+						<b>Example</b>
 						<span></span><!-- icon -->
 					</a>
                     </li>
                     <li>
-                         <a href="#cd-placeholder-4">
-						<b>Contact</b>
-						<span></span><!-- icon -->
-					</a>
-                    </li>
-                    <li>
-                         <a href="#cd-placeholder-5">
+                         <a href="index.html">
 						<b>Home</b>
 						<span></span><!-- icon -->
 					</a>
@@ -103,16 +96,15 @@
      <!-- .cd-secondary-nav -->
      <main class="cd-main-content">
           <section id="cd-placeholder-1" class="cd-section cd-container">
-               <h2>Om</h2>
+               <h2>UX</h2>
                <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi
                </p>
-               <img src="img/prof_pic_1jpg.jpg" alt="billed">
           </section>
           <!-- #cd-placeholder-1 -->
 
           <section id="cd-placeholder-2" class="cd-section cd-container">
-               <h2>Portfolio</h2>
+               <h2>Cases</h2>
 
 
                <div class="port-section">
@@ -121,7 +113,7 @@
                               <div class="port-box port-img-1">
                                    <a href="#">
                                         <div class="port-info">
-                                             <h3>Webdesign</h3>
+                                             <h3>Stilart</h3>
 
                                         </div>
                                    </a>
@@ -131,7 +123,7 @@
                               <div class="port-box port-img-2">
                                    <a href="#">
                                         <div class="port-info">
-                                             <h3>Video</h3>
+                                             <h3>20 bokse</h3>
 
                                         </div>
                                    </a>
@@ -141,87 +133,93 @@
                               <div class="port-box port-img-3">
                                    <a href="#">
                                         <div class="port-info">
-                                             <h3>Animation</h3>
+                                             <h3>Re-design</h3>
 
                                         </div>
                                    </a>
                               </div>
                          </li>
-                         <li>
-                              <div class="port-box port-img-4">
-                                   <a href="#">
-                                        <div class="port-info">
-                                             <h3>Ux</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                              <li>
-                                   <div class="port-box port-img-4">
-                                        <a href="#">
-                                             <div class="port-info">
-                                                  <h3>Ux</h3>
-
-                                             </div>
-                                        </a>
-                                   </div>
-                              </li>
-
-                              <li>
-                                   <div class="port-box port-img-1">
-                                        <a href="#">
-                                             <div class="port-info">
-                                                  <h3>Webdesign</h3>
-
-                                             </div>
-                                        </a>
-                                   </div>
-                              </li>
                     </ul>
                </div>
-
-
-
-
-
-
-
           </section>
           <!-- #cd-placeholder-2 -->
 
           <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Chat</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi nostrum aut voluptates veniam. Cum neque quam fuga sapiente quidem eum necessitatibus nulla, cupiditate a, repudiandae iusto in dolor eaque commodi nostrum consequuntur dolores velit eligendi dolorem quae. Distinctio quae, cumque aliquid quos consequuntur perspiciatis voluptates, laboriosam velit qui et aut sint esse nemo voluptatibus, dolore veritatis natus facilis commodi sed. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias sunt mollitia atque tempore ea cum exercitationem, quisquam est consectetur tempora ipsam, obcaecati voluptate a. Autem minus cumque voluptatem eaque fugit nostrum reprehenderit incidunt officia. Nesciunt reiciendis delectus officiis fugit sint at totam nisi commodi repellendus iusto dolorum molestias dignissimos natus, impedit quam atque ex voluptas ut facere assumenda iure incidunt rerum vitae accusamus? Et voluptatibus unde, fugiat tenetur sed dolore, praesentium magni illo nobis incidunt, possimus doloremque dolorem sunt. Aliquid ducimus delectus esse voluptatem officia perferendis, a voluptate omnis adipisci expedita distinctio praesentium natus veniam accusamus iure, quasi, inventore reiciendis.
+               <h2>Example</h2>
+               <iframe src="https://xd.adobe.com/view/70905889-8aec-43b5-5fae-cb1c87de05c1-06a1/" height="650" width="100%" style="background-color: white">
+               </iframe>
+               <p>Stilart-site lavet til studiestart prøven. Her vist i mobil-format, men den fulde desktop side kan ses <a href="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html">her.</a>
                </p>
           </section>
+
+          <section id="cd-placeholder-3" class="cd-section cd-container">
+               <h2>Example</h2>
+               <iframe src="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/index.html" height="650" width="100%" style="background-color: white">
+               </iframe>
+               <p>Re-design af hjemmeside - Dette er mobil versionen, fulde desktop version kan ses <a href="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/index.html">her.</a>
+
+               </p>
+
+
+
+          </section>
+          <section id="cd-placeholder-3" class="cd-section cd-container">
+               <h2>Example</h2>
+               <iframe src="               http://www.kroghport.dk/kea/04-responsive%28OLD%29/16_bokse/16_bokse.html#" height="650" width="100%" style="background-color: white">
+               </iframe>
+               <p>16 Bokse. Css/html transformation øvelse.</p>
+
+
+
+          </section>
+
+          <section id="cd-placeholder-3" class="cd-section cd-container">
+               <h2>Example</h2>
+               <iframe src="               http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01.04.a_20_bokse/index.html" height="650" width="100%" style="background-color: white">
+               </iframe>
+               <p>20 Bokse. Css/html transformation øvelse.</p>
+
+
+
+          </section>
+
+
+
+          <!--
+          <h2>Example</h2>
+          <div class="iframe">
+               <iframe src="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html#" height="650" width="90%" style="background-color: white">
+
+
+               </iframe>
+          </div>
+          <p>
+               Stilart-site lavet til studiestart prøven. Her vist i mobil-format, men den fulde desktop side kan ses her: <a href="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html">Stilart Site</a>
+          </p>
+-->
+
+
+
           <!-- #cd-placeholder-3 -->
 
-          <section id="cd-placeholder-4" class="cd-section cd-container">
-               <h2>Contact</h2>
+          <footer class="parent_foot">
 
-               <h2>Mail</h2><i class="fa fa-envelope" style="font-size:36px"></i>
-               <h2>Facebook</h2><i class="fa fa-facebook-square" style="font-size:36px"></i>
-               <h2>LinkdIn</h2><i class="fa fa-linkedin-square" style="font-size:36px"></i>
-
-               <h2>Phone</h2><i class="fa fa-phone-square" style="font-size:36px"></i>
-               <br>
-               <i class="fa fa-graduation-cap" style="font-size:36px"></i>
-               <i class="fa fa-map-marker" style="font-size:36px"></i>
+               <div class="content_foot">
+                    <i class="fa fa-envelope" style="font-size:36px"></i>
 
 
 
+                    <i class="fa fa-facebook-square" style="font-size:36px"></i>
 
-          </section>
-          <!-- #cd-placeholder-4 -->
 
-          <section id="cd-placeholder-5" class="cd-section cd-container">
-               <h2>Stats</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi nostrum aut voluptates veniam. Cum neque quam fuga sapiente quidem eum necessitatibus nulla, cupiditate a, repudiandae iusto in dolor eaque commodi nostrum consequuntur dolores velit eligendi dolorem quae. Distinctio quae, cumque aliquid quos consequuntur perspiciatis voluptates, laboriosam velit qui et aut sint esse nemo voluptatibus, dolore veritatis natus facilis commodi sed. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, neque, tempora. Accusamus similique labore harum in ut repellat. Earum iusto non ex perspiciatis sequi a, provident nam optio, vitae ea vel illum excepturi aut fugiat quos. Fugit facere a, quidem quia perferendis ipsum impedit eaque repellendus esse, tenetur repellat natus voluptatem ab possimus laborum tempora qui nam vero et omnis. Sed ipsum possimus in, dignissimos optio itaque quis, reprehenderit vero vel tempora, maiores odit totam. Doloribus voluptatem similique possimus corporis pariatur labore, nulla, minima magnam, officia rerum vel alias, molestiae soluta quisquam ea. Necessitatibus hic vitae nisi ipsum cum a voluptatibus commodi eius ad minus animi cumque nulla suscipit itaque, reiciendis placeat modi sequi eligendi voluptatum. Quasi veritatis autem omnis, voluptatum hic eos dicta, repudiandae iusto rem error facere pariatur commodi impedit reprehenderit temporibus facilis magnam asperiores. Ipsam, illum commodi laboriosam neque eligendi eaque quisquam quidem illo sint eos. Esse velit provident, veritatis dolor facilis dignissimos commodi molestias saepe impedit excepturi qui odit repudiandae cumque? Sunt omnis voluptatum, eaque repellat, pariatur iure nobis cum eos repellendus voluptate culpa totam alias autem ea earum animi optio laudantium neque nisi suscipit in adipisci enim quisquam laboriosam! Cumque, fugit saepe alias mollitia dignissimos.
-               </p>
-          </section>
-          <!-- #cd-placeholder-5 -->
+                    <i class="fa fa-linkedin-square" style="font-size:36px"></i>
+
+
+                    <i class="fa fa-phone-square" style="font-size:36px"></i>
+
+
+               </div>
+          </footer>
      </main>
      <!-- .cd-main-content -->
 
@@ -232,125 +230,6 @@
      <!-------------------------------
     RESPONSIVE END
     --------------------------------->
-
-
-
-
-
-     <!--    <div class="cover_1">
-     </div>-->
-     <div id="#about">
-          <div class="container">
-               <div class="textfield">
-
-               </div>
-          </div>
-
-     </div>
-
-     <section id="cd-timeline" class="cd-container">
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-picture">
-               </div>
-
-               <div class="cd-timeline-content">
-                    <h2>2018 - 2020</h2>
-                    <div class="timeline-content-info">
-                         <span class="timeline-content-info-title">
-            <i class="fa fa-certificate" aria-hidden="true"></i>
-            Multimediedesigner
-          </span>
-                         <span class="timeline-content-info-date">
-            <i class="fa fa-calendar-o" aria-hidden="true"></i>
-            June 2016 - Present
-          </span>
-                    </div>
-                    <p>Working alongside the designer team implementing the designs, also developing custom solutions to address team necessities.</p>
-                    <ul class="content-skills">
-                         <li>HTML5</li>
-                         <li>CSS3</li>
-                         <li>JavaScript</li>
-                         <li>jQuery</li>
-                         <li>Wordpress</li>
-                         <li>Video</li>
-                         <li>Animation</li>
-                         <li>UX</li>
-                    </ul>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-movie">
-               </div>
-               <!-- cd-timeline-img -->
-
-               <div class="cd-timeline-content">
-                    <h2>Title of section 2</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-                    <span class="cd-date">Jan 18</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-picture">
-               </div>
-               <!-- cd-timeline-img -->
-
-               <div class="cd-timeline-content">
-                    <h2>Title of section 3</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-                    <span class="cd-date">Jan 24</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-location">
-               </div>
-               <!-- cd-timeline-img -->
-
-               <div class="cd-timeline-content">
-                    <h2>Title of section 4</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-                    <span class="cd-date">Feb 14</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-location">
-               </div>
-
-               <div class="cd-timeline-content">
-                    <h2>Title of section 5</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
-                    <span class="cd-date">Feb 18</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-movie">
-               </div>
-               <!-- cd-timeline-img -->
-
-               <div class="cd-timeline-content">
-                    <h2>Final Section</h2>
-                    <p>This is the content of the last section</p>
-                    <span class="cd-date">Feb 26</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-     </section>
-     <!-- cd-timeline -->
 
 </body>
 
