--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="da" class="animated fadeIn">
 
 <head>
      <meta charset="utf-8">
@@ -7,9 +7,9 @@
      <link rel="stylesheet" href="css/stylesheet.css">
      <link rel="stylesheet" href="css/reset.css">
      <link rel="stylesheet" href="portfolo/css/port.css">
-     <!-- CSS reset -->
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="css/transition.css">
      <title>Kroghport</title>
 </head>
 
@@ -25,41 +25,18 @@
                     <li><a href="#0">Timeline</a></li>
                </ul>
           </nav>
-          <!-- cd-primary-nav -->
-          <!-------------------------------------------------------------
-          <nav>
-               <ul>
-                    <li>
-                         <a href="#">Home</a>
-                    </li>
-                    <li>
-                         <a href="#">About</a>
-                    </li>
-                    <li>
-                         <a href="#">Portfolio</a>
-                    </li>
-                    <li>
-                         <a href="#">Contact</a>
 
-                    </li>
-                    <li>
-                         <a href="#">Timeline</a>
-
-                    </li>
-               </ul>
-          </nav>
-          ----------------------------------->
      </header>
-     <!-----------------------------------------
-     responsive
-     ------------------------------------------->
 
      <section id="cd-intro">
           <div id="cd-intro-tagline">
-               <h1>My personal portfolio</h1>
+               <h1>KEA semester portfolio</h1>
           </div>
           <!-- #cd-intro-tagline -->
+
      </section>
+
+
      <!-- #cd-intro -->
 
      <div class="cd-secondary-nav">
@@ -119,7 +96,7 @@
                     <ul class="port-grid">
                          <li>
                               <div class="port-box port-img-1">
-                                   <a href="#">
+                                   <a href="webdesign.html">
                                         <div class="port-info">
                                              <h3>Webdesign</h3>
 
@@ -129,7 +106,7 @@
                          </li>
                          <li>
                               <div class="port-box port-img-2">
-                                   <a href="#">
+                                   <a href="video.html">
                                         <div class="port-info">
                                              <h3>Video</h3>
 
@@ -139,7 +116,7 @@
                          </li>
                          <li>
                               <div class="port-box port-img-3">
-                                   <a href="#">
+                                   <a href="animation.html">
                                         <div class="port-info">
                                              <h3>Animation</h3>
 
@@ -149,7 +126,7 @@
                          </li>
                          <li>
                               <div class="port-box port-img-4">
-                                   <a href="#">
+                                   <a href="ux.html">
                                         <div class="port-info">
                                              <h3>Ux</h3>
 
@@ -197,33 +174,37 @@
           </section>
           <!-- #cd-placeholder-3 -->
 
-          <section id="cd-placeholder-4" class="cd-section cd-container">
-               <h2>Contact</h2>
-
-               <h2>Mail</h2><i class="fa fa-envelope" style="font-size:36px"></i>
-               <h2>Facebook</h2><i class="fa fa-facebook-square" style="font-size:36px"></i>
-               <h2>LinkdIn</h2><i class="fa fa-linkedin-square" style="font-size:36px"></i>
-
-               <h2>Phone</h2><i class="fa fa-phone-square" style="font-size:36px"></i>
-               <br>
-               <i class="fa fa-graduation-cap" style="font-size:36px"></i>
-               <i class="fa fa-map-marker" style="font-size:36px"></i>
-
-
-
-
-          </section>
           <!-- #cd-placeholder-4 -->
 
           <section id="cd-placeholder-5" class="cd-section cd-container">
                <h2>Stats</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi nostrum aut voluptates veniam. Cum neque quam fuga sapiente quidem eum necessitatibus nulla, cupiditate a, repudiandae iusto in dolor eaque commodi nostrum consequuntur dolores velit eligendi dolorem quae. Distinctio quae, cumque aliquid quos consequuntur perspiciatis voluptates, laboriosam velit qui et aut sint esse nemo voluptatibus, dolore veritatis natus facilis commodi sed. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, neque, tempora. Accusamus similique labore harum in ut repellat. Earum iusto non ex perspiciatis sequi a, provident nam optio, vitae ea vel illum excepturi aut fugiat quos. Fugit facere a, quidem quia perferendis ipsum impedit eaque repellendus esse, tenetur repellat natus voluptatem ab possimus laborum tempora qui nam vero et omnis. Sed ipsum possimus in, dignissimos optio itaque quis, reprehenderit vero vel tempora, maiores odit totam. Doloribus voluptatem similique possimus corporis pariatur labore, nulla, minima magnam, officia rerum vel alias, molestiae soluta quisquam ea. Necessitatibus hic vitae nisi ipsum cum a voluptatibus commodi eius ad minus animi cumque nulla suscipit itaque, reiciendis placeat modi sequi eligendi voluptatum. Quasi veritatis autem omnis, voluptatum hic eos dicta, repudiandae iusto rem error facere pariatur commodi impedit reprehenderit temporibus facilis magnam asperiores. Ipsam, illum commodi laboriosam neque eligendi eaque quisquam quidem illo sint eos. Esse velit provident, veritatis dolor facilis dignissimos commodi molestias saepe impedit excepturi qui odit repudiandae cumque? Sunt omnis voluptatum, eaque repellat, pariatur iure nobis cum eos repellendus voluptate culpa totam alias autem ea earum animi optio laudantium neque nisi suscipit in adipisci enim quisquam laboriosam! Cumque, fugit saepe alias mollitia dignissimos.
-               </p>
           </section>
+
           <!-- #cd-placeholder-5 -->
      </main>
-     <!-- .cd-main-content -->
+
+     <footer class="parent_foot">
+
+          <div class="content_foot">
+               <i class="fa fa-envelope" style="font-size:36px"></i>
+
+
+
+               <i class="fa fa-facebook-square" style="font-size:36px"></i>
+
+
+               <i class="fa fa-linkedin-square" style="font-size:36px"></i>
+
+
+               <i class="fa fa-phone-square" style="font-size:36px"></i>
+
+
+          </div>
+     </footer>
+
+     <!-------------------------------
+    JQUERY
+    --------------------------------->
 
      <script src="js/jquery-2.1.1.js"></script>
      <script src="js/main.js"></script>
@@ -232,125 +213,6 @@
      <!-------------------------------
     RESPONSIVE END
     --------------------------------->
-
-
-
-
-
-     <!--    <div class="cover_1">
-     </div>-->
-     <div id="#about">
-          <div class="container">
-               <div class="textfield">
-
-               </div>
-          </div>
-
-     </div>
-
-     <section id="cd-timeline" class="cd-container">
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-picture">
-               </div>
-
-               <div class="cd-timeline-content">
-                    <h2>2018 - 2020</h2>
-                    <div class="timeline-content-info">
-                         <span class="timeline-content-info-title">
-            <i class="fa fa-certificate" aria-hidden="true"></i>
-            Multimediedesigner
-          </span>
-                         <span class="timeline-content-info-date">
-            <i class="fa fa-calendar-o" aria-hidden="true"></i>
-            June 2016 - Present
-          </span>
-                    </div>
-                    <p>Working alongside the designer team implementing the designs, also developing custom solutions to address team necessities.</p>
-                    <ul class="content-skills">
-                         <li>HTML5</li>
-                         <li>CSS3</li>
-                         <li>JavaScript</li>
-                         <li>jQuery</li>
-                         <li>Wordpress</li>
-                         <li>Video</li>
-                         <li>Animation</li>
-                         <li>UX</li>
-                    </ul>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-movie">
-               </div>
-               <!-- cd-timeline-img -->
-
-               <div class="cd-timeline-content">
-                    <h2>Title of section 2</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-                    <span class="cd-date">Jan 18</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-picture">
-               </div>
-               <!-- cd-timeline-img -->
-
-               <div class="cd-timeline-content">
-                    <h2>Title of section 3</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-                    <span class="cd-date">Jan 24</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-location">
-               </div>
-               <!-- cd-timeline-img -->
-
-               <div class="cd-timeline-content">
-                    <h2>Title of section 4</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-                    <span class="cd-date">Feb 14</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-location">
-               </div>
-
-               <div class="cd-timeline-content">
-                    <h2>Title of section 5</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
-                    <span class="cd-date">Feb 18</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-
-          <div class="cd-timeline-block">
-               <div class="cd-timeline-img cd-movie">
-               </div>
-               <!-- cd-timeline-img -->
-
-               <div class="cd-timeline-content">
-                    <h2>Final Section</h2>
-                    <p>This is the content of the last section</p>
-                    <span class="cd-date">Feb 26</span>
-               </div>
-               <!-- cd-timeline-content -->
-          </div>
-          <!-- cd-timeline-block -->
-     </section>
-     <!-- cd-timeline -->
 
 </body>
 
