logofix - ikon -fix

--- a/animation.html
+++ b/animation.html
@@ -15,10 +15,9 @@
 
 <body>
      <header class="cd-header">
-          <div id="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
           <nav class="cd-primary-nav">
                <ul>
-                    <li><a href="#0">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#0">About</a></li>
                     <li><a href="#0">Portfolio</a></li>
                     <li><a href="#0">Contact</a></li>
@@ -26,37 +25,13 @@
                </ul>
           </nav>
           <!-- cd-primary-nav -->
-          <!-------------------------------------------------------------
-          <nav>
-               <ul>
-                    <li>
-                         <a href="#">Home</a>
-                    </li>
-                    <li>
-                         <a href="#">About</a>
-                    </li>
-                    <li>
-                         <a href="#">Portfolio</a>
-                    </li>
-                    <li>
-                         <a href="#">Contact</a>
 
-                    </li>
-                    <li>
-                         <a href="#">Timeline</a>
-
-                    </li>
-               </ul>
-          </nav>
-          ----------------------------------->
      </header>
-     <!-----------------------------------------
-     responsive
-     ------------------------------------------->
+
 
      <section id="cd-intro">
           <div id="cd-intro-tagline">
-               <h1>My personal portfolio</h1>
+               <h1>KEA semester portfolio</h1>
           </div>
           <!-- #cd-intro-tagline -->
      </section>
@@ -92,7 +67,7 @@
 					</a>
                     </li>
                     <li>
-                         <a href="#cd-placeholder-5">
+                         <a href="index.html">
 						<b>Home</b>
 						<span></span><!-- icon -->
 					</a>
@@ -215,13 +190,34 @@
           </section>
           <!-- #cd-placeholder-4 -->
 
-          <section id="cd-placeholder-5" class="cd-section cd-container">
+          <section class="cd-section cd-container">
                <h2>Stats</h2>
                <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi nostrum aut voluptates veniam. Cum neque quam fuga sapiente quidem eum necessitatibus nulla, cupiditate a, repudiandae iusto in dolor eaque commodi nostrum consequuntur dolores velit eligendi dolorem quae. Distinctio quae, cumque aliquid quos consequuntur perspiciatis voluptates, laboriosam velit qui et aut sint esse nemo voluptatibus, dolore veritatis natus facilis commodi sed. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, neque, tempora. Accusamus similique labore harum in ut repellat. Earum iusto non ex perspiciatis sequi a, provident nam optio, vitae ea vel illum excepturi aut fugiat quos. Fugit facere a, quidem quia perferendis ipsum impedit eaque repellendus esse, tenetur repellat natus voluptatem ab possimus laborum tempora qui nam vero et omnis. Sed ipsum possimus in, dignissimos optio itaque quis, reprehenderit vero vel tempora, maiores odit totam. Doloribus voluptatem similique possimus corporis pariatur labore, nulla, minima magnam, officia rerum vel alias, molestiae soluta quisquam ea. Necessitatibus hic vitae nisi ipsum cum a voluptatibus commodi eius ad minus animi cumque nulla suscipit itaque, reiciendis placeat modi sequi eligendi voluptatum. Quasi veritatis autem omnis, voluptatum hic eos dicta, repudiandae iusto rem error facere pariatur commodi impedit reprehenderit temporibus facilis magnam asperiores. Ipsam, illum commodi laboriosam neque eligendi eaque quisquam quidem illo sint eos. Esse velit provident, veritatis dolor facilis dignissimos commodi molestias saepe impedit excepturi qui odit repudiandae cumque? Sunt omnis voluptatum, eaque repellat, pariatur iure nobis cum eos repellendus voluptate culpa totam alias autem ea earum animi optio laudantium neque nisi suscipit in adipisci enim quisquam laboriosam! Cumque, fugit saepe alias mollitia dignissimos.
                </p>
           </section>
-          <!-- #cd-placeholder-5 -->
+
+          <footer class="parent_foot">
+
+               <div class="content_foot">
+
+                    <a href="mailto:
+rikk626a@stud.kea.dk"><i class="fa fa-envelope" style="font-size:36px">
+                    </i></a>
+
+                    <a href="https://www.facebook.com/RikkeKrogh91">
+               <i class="fa fa-facebook-square" style="font-size:36px"></i>
+               </a>
+
+                    <a href="www.linkedin.com/in/
+rikke-krogh1991"><i class="fa fa-linkedin-square" style="font-size:36px"></i>
+</a>
+
+                    <a href="tel:+45-28965070">
+               <i class="fa fa-phone-square" style="font-size:36px"></i>
+</a>
+               </div>
+          </footer>
      </main>
      <!-- .cd-main-content -->
 
