--- a/index.html
+++ b/index.html
@@ -1,219 +1,33 @@
 <!DOCTYPE html>
 <html lang="da" class="animated fadeIn">
-
 <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="css/stylesheet.css">
-     <link rel="stylesheet" href="css/reset.css">
-     <link rel="stylesheet" href="portfolo/css/port.css">
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="intro.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="css/transition.css">
-     <title>Kroghport</title>
+     <title>Velkommen</title>
 </head>
 
 <body>
-     <header class="cd-header">
-          <div id="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
-          <nav class="cd-primary-nav">
-               <ul>
-                    <li><a href="#0">Home</a></li>
-                    <li><a href="#0">About</a></li>
-                    <li><a href="#0">Portfolio</a></li>
-                    <li><a href="#0">Contact</a></li>
-                    <li><a href="#0">Timeline</a></li>
-               </ul>
-          </nav>
-
-     </header>
-
-     <section id="cd-intro">
-          <div id="cd-intro-tagline">
-               <h1>KEA semester portfolio</h1>
-          </div>
-          <!-- #cd-intro-tagline -->
-
-     </section>
-
-
-     <!-- #cd-intro -->
-
-     <div class="cd-secondary-nav">
-          <a href="#0" class="cd-secondary-nav-trigger">Menu<span></span></a>
-          <!-- button visible on small devices -->
-          <nav>
-               <ul>
-                    <li>
-                         <a href="#cd-placeholder-1">
-						<b>Om</b>
-						<span></span><!-- icon -->
-					</a>
-                    </li>
-                    <li>
-                         <a href="#cd-placeholder-2">
-						<b>Portfolio</b>
-						<span></span><!-- icon -->
-					</a>
-                    </li>
-                    <li>
-                         <a href="#cd-placeholder-3">
-						<b>Timeline</b>
-						<span></span><!-- icon -->
-					</a>
-                    </li>
-                    <li>
-                         <a href="#cd-placeholder-4">
-						<b>Contact</b>
-						<span></span><!-- icon -->
-					</a>
-                    </li>
-                    <li>
-                         <a href="#cd-placeholder-5">
-						<b>Home</b>
-						<span></span><!-- icon -->
-					</a>
-                    </li>
-               </ul>
-          </nav>
+     <div class="foo">
+          <span class="letter" data-letter="K">K</span>
+          <span class="letter" data-letter="E">E</span>
+          <span class="letter" data-letter="A">A</span>
+          <br>
+          <span class="letter" data-letter="P">P</span>
+          <span class="letter" data-letter="O">O</span>
+          <span class="letter" data-letter="R">R</span>
+          <span class="letter" data-letter="T">T</span>
+          <span class="letter" data-letter="F">F</span>
+          <span class="letter" data-letter="O">O</span>
+          <span class="letter" data-letter="L">L</span>
+          <span class="letter" data-letter="I">I</span>
+          <span class="letter" data-letter="O">O</span>
      </div>
-     <!-- .cd-secondary-nav -->
-     <main class="cd-main-content">
-          <section id="cd-placeholder-1" class="cd-section cd-container">
-               <h2>Om</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi
-               </p>
-               <img src="img/prof_pic_1jpg.jpg" alt="billed">
-          </section>
-          <!-- #cd-placeholder-1 -->
 
-          <section id="cd-placeholder-2" class="cd-section cd-container">
-               <h2>Portfolio</h2>
-
-
-               <div class="port-section">
-                    <ul class="port-grid">
-                         <li>
-                              <div class="port-box port-img-1">
-                                   <a href="webdesign.html">
-                                        <div class="port-info">
-                                             <h3>Webdesign</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                         </li>
-                         <li>
-                              <div class="port-box port-img-2">
-                                   <a href="video.html">
-                                        <div class="port-info">
-                                             <h3>Video</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                         </li>
-                         <li>
-                              <div class="port-box port-img-3">
-                                   <a href="animation.html">
-                                        <div class="port-info">
-                                             <h3>Animation</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                         </li>
-                         <li>
-                              <div class="port-box port-img-4">
-                                   <a href="ux.html">
-                                        <div class="port-info">
-                                             <h3>Ux</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                              <li>
-                                   <div class="port-box port-img-4">
-                                        <a href="#">
-                                             <div class="port-info">
-                                                  <h3>Ux</h3>
-
-                                             </div>
-                                        </a>
-                                   </div>
-                              </li>
-
-                              <li>
-                                   <div class="port-box port-img-1">
-                                        <a href="#">
-                                             <div class="port-info">
-                                                  <h3>Webdesign</h3>
-
-                                             </div>
-                                        </a>
-                                   </div>
-                              </li>
-                    </ul>
-               </div>
-
-
-
-
-
-
-
-          </section>
-          <!-- #cd-placeholder-2 -->
-
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Chat</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi nostrum aut voluptates veniam. Cum neque quam fuga sapiente quidem eum necessitatibus nulla, cupiditate a, repudiandae iusto in dolor eaque commodi nostrum consequuntur dolores velit eligendi dolorem quae. Distinctio quae, cumque aliquid quos consequuntur perspiciatis voluptates, laboriosam velit qui et aut sint esse nemo voluptatibus, dolore veritatis natus facilis commodi sed. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias sunt mollitia atque tempore ea cum exercitationem, quisquam est consectetur tempora ipsam, obcaecati voluptate a. Autem minus cumque voluptatem eaque fugit nostrum reprehenderit incidunt officia. Nesciunt reiciendis delectus officiis fugit sint at totam nisi commodi repellendus iusto dolorum molestias dignissimos natus, impedit quam atque ex voluptas ut facere assumenda iure incidunt rerum vitae accusamus? Et voluptatibus unde, fugiat tenetur sed dolore, praesentium magni illo nobis incidunt, possimus doloremque dolorem sunt. Aliquid ducimus delectus esse voluptatem officia perferendis, a voluptate omnis adipisci expedita distinctio praesentium natus veniam accusamus iure, quasi, inventore reiciendis.
-               </p>
-          </section>
-          <!-- #cd-placeholder-3 -->
-
-          <!-- #cd-placeholder-4 -->
-
-          <section id="cd-placeholder-5" class="cd-section cd-container">
-               <h2>Stats</h2>
-          </section>
-
-          <!-- #cd-placeholder-5 -->
-     </main>
-
-     <footer class="parent_foot">
-
-          <div class="content_foot">
-               <i class="fa fa-envelope" style="font-size:36px"></i>
-
-
-
-               <i class="fa fa-facebook-square" style="font-size:36px"></i>
-
-
-               <i class="fa fa-linkedin-square" style="font-size:36px"></i>
-
-
-               <i class="fa fa-phone-square" style="font-size:36px"></i>
-
-
-          </div>
-     </footer>
-
-     <!-------------------------------
-    JQUERY
-    --------------------------------->
-
-     <script src="js/jquery-2.1.1.js"></script>
-     <script src="js/main.js"></script>
-     <!-- Resource jQuery -->
-
-     <!-------------------------------
-    RESPONSIVE END
-    --------------------------------->
-
+     <div class="content-wrapper">
+          <a href="intro.html" class="enter-knap">ENTER</a>
+     </div>
 </body>
-
 </html>
