--- a/ux.html
+++ b/ux.html
@@ -15,7 +15,6 @@
 
 <body>
      <header class="cd-header">
-          <div id="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
           <nav class="cd-primary-nav">
                <ul>
                     <li><a href="index.html">Home</a></li>
@@ -25,37 +24,12 @@
                </ul>
           </nav>
           <!-- cd-primary-nav -->
-          <!-------------------------------------------------------------
-          <nav>
-               <ul>
-                    <li>
-                         <a href="index.html>Home</a>
-                    </li>
-                    <li>
-                         <a href="#">About</a>
-                    </li>
-                    <li>
-                         <a href="#">Portfolio</a>
-                    </li>
-                    <li>
-                         <a href="#">Contact</a>
-
-                    </li>
-                    <li>
-                         <a href="#">Timeline</a>
-
-                    </li>
-               </ul>
-          </nav>
-          ----------------------------------->
      </header>
-     <!-----------------------------------------
-     responsive
-     ------------------------------------------->
+
 
      <section id="cd-intro">
           <div id="cd-intro-tagline">
-               <h1>My personal portfolio</h1>
+               <h1>KEA semester portfolio</h1>
           </div>
           <!-- #cd-intro-tagline -->
      </section>
@@ -205,19 +179,22 @@
           <footer class="parent_foot">
 
                <div class="content_foot">
-                    <i class="fa fa-envelope" style="font-size:36px"></i>
 
+                    <a href="mailto:
+rikk626a@stud.kea.dk"><i class="fa fa-envelope" style="font-size:36px">
+                    </i></a>
 
+                    <a href="https://www.facebook.com/RikkeKrogh91">
+               <i class="fa fa-facebook-square" style="font-size:36px"></i>
+               </a>
 
-                    <i class="fa fa-facebook-square" style="font-size:36px"></i>
+                    <a href="www.linkedin.com/in/
+rikke-krogh1991"><i class="fa fa-linkedin-square" style="font-size:36px"></i>
+</a>
 
-
-                    <i class="fa fa-linkedin-square" style="font-size:36px"></i>
-
-
-                    <i class="fa fa-phone-square" style="font-size:36px"></i>
-
-
+                    <a href="tel:+45-28965070">
+               <i class="fa fa-phone-square" style="font-size:36px"></i>
+</a>
                </div>
           </footer>
      </main>
