--- a/video.html
+++ b/video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="da" class="animated fadeIn">
 
 <head>
      <meta charset="utf-8">
@@ -10,6 +10,7 @@
      <!-- CSS reset -->
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="css/transition.css">
      <title>Kroghport</title>
 </head>
 
