--- a/video.html
+++ b/video.html
@@ -105,8 +105,6 @@
 
           <section id="cd-placeholder-2" class="cd-section cd-container">
                <h2>Cases</h2>
-
-
                <div class="port-section">
                     <ul class="port-grid">
                          <li>
@@ -142,66 +140,53 @@
                     </ul>
                </div>
           </section>
-          <!-- #cd-placeholder-2 -->
 
+          <!-- #Video-placeholders -->
           <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="http://www.kroghport.dk/kea/03-video/03_01_01_klippeopgaven/klippeopgaven_02.mp4" height="650" width="100%" style="background-color: white">
-               </iframe>
-               <p>Stilart-site lavet til studiestart prøven. Her vist i mobil-format, men den fulde desktop side kan ses <a href="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html">her.</a>
-               </p>
+               <div class="video-container">
+                    <div class="video-holder-1">
+                         <iframe src="https://www.youtube.com/embed/3dlW3RYv7BY?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                         <h2>TEEEEKST</h2>
+                         <p>Stilart-site lavet til studiestart prøve
+                         </p>
+                    </div>
+
+                    <div class="video-holder-2">
+                         <iframe src="https://www.youtube.com/embed/w1-iRRmctek?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                         <h2>Example</h2>
+                         <p>Re-design af hjemmeside - Dette er mobil versionen, fulde desktop version kan ses </p>
+                    </div>
+
+
+                    <div class="video-holder-3">
+                         <iframe src="https://player.vimeo.com/video/237039079" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                         <h2>Example</h2>
+                         <p>TEKST HER</p>
+                    </div>
+
+                    <div class="video-holder-4">
+
+                         <iframe src="https://www.youtube.com/embed/q5xEpkNOOVU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                         <h2>Example</h2>
+                         <p>20 Bokse. Css/html transformation øvelse.</p>
+                    </div>
+
+                    <div class="video-holder-5">
+                         <iframe src="https://www.youtube.com/embed/_XvvhH3YQ3w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                         <h2>Example</h2>
+                         <p>TEKST HER</p>
+                    </div>
+
+
+                    <div class="video-holder-6">
+                         <iframe src="https://www.youtube.com/embed/X9B2aATnvGo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                         <h2>Example</h2>
+                         <p>TEKST HER</p>
+                    </div>
+               </div>
           </section>
-
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="http://www.kroghport.dk/kea/03-video/html-tag/html-tag-video_2.mp4" height="650" width="100%" style="background-color: white">
-               </iframe>
-               <p>Re-design af hjemmeside - Dette er mobil versionen, fulde desktop version kan ses <a href="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/index.html">her.</a>
-
-               </p>
-
-
-
-          </section>
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="https://player.vimeo.com/video/237039079" width="100%" height="650" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-
-          </section>
-
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="               http://www.kroghport.dk/kea/03-video%28OLD%29/virksomhedsvideo/virksomhedsvideo_final.mp4" height="650" width="100%" style="background-color: white">
-               </iframe>
-               <p>20 Bokse. Css/html transformation øvelse.</p>
-
-
-
-          </section>
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <iframe width="100%" height="650" src="https://www.youtube.com/embed/_XvvhH3YQ3w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </section>
-
-          <!--
-          <h2>Example</h2>
-          <div class="iframe">
-               <iframe src="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html#" height="650" width="90%" style="background-color: white">
-
-
-               </iframe>
-          </div>
-          <p>
-               Stilart-site lavet til studiestart prøven. Her vist i mobil-format, men den fulde desktop side kan ses her: <a href="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html">Stilart Site</a>
-          </p>
--->
-
-
-
-          <!-- #cd-placeholder-3 -->
 
           <footer class="parent_foot">
-
                <div class="content_foot">
 
                     <a href="mailto:
